Reviewed passages containing parallels to P. soka parideva dukkha domanassa and standarized English translations (except for MA, which is different than the other Agamas).

--- a/01_agama/dirgha/DA_13.md
+++ b/01_agama/dirgha/DA_13.md
@@ -59,7 +59,7 @@ next: DA_14.html
 15\. “Suppose they also ask, ‘What’s the condition for action?’ They should be answered, ‘Delusion is the condition for action.’
 {:#p15}
 
-16\. “Thus, Ānanda, action exists conditioned by delusion. Consciousness exists conditioned by action. Name and form exist conditioned by consciousness. The six sense fields exist conditioned by name and form. Contact exists conditioned by the six sense fields. Feeling exists conditioned by contact. Craving exists conditioned by feeling. Grasping exists conditioned by craving. Existence exists conditioned by grasping. Birth exists conditioned by existence. The formation of the great calamity of old age, death, sorrow, lamentation, and suffering exists conditioned by birth. These are the conditions for this great mass of suffering.”
+16\. “Thus, Ānanda, action exists conditioned by delusion. Consciousness exists conditioned by action. Name and form exist conditioned by consciousness. The six sense fields exist conditioned by name and form. Contact exists conditioned by the six sense fields. Feeling exists conditioned by contact. Craving exists conditioned by feeling. Grasping exists conditioned by craving. Existence exists conditioned by grasping. Birth exists conditioned by existence. The formation of the great calamity of old age, death, grief, sorrow, pain, and trouble exists conditioned by birth. These are the conditions for this great mass of suffering.”
 {:#p16}
 
 #### The Dependent Origination of Old Age and Death
@@ -245,7 +245,7 @@ next: DA_14.html
 59\. “Ānanda, it’s for this reason that we know name and form comes from consciousness. ‘Name and form exist conditioned by consciousness.’ That’s the meaning of what I said.
 {:#p59}
 
-60\. “Ānanda, “‘Consciousness exists conditioned by name and form.’ What does this mean? If consciousness didn’t abide in name and form, then consciousness would have nowhere to reside. If it had nowhere to reside, would there be birth, old age, illness, death, sorrow, lamentation, and suffering?”
+60\. “Ānanda, “‘Consciousness exists conditioned by name and form.’ What does this mean? If consciousness didn’t abide in name and form, then consciousness would have nowhere to reside. If it had nowhere to reside, would there be birth, old age, illness, death, grief, sorrow, pain, and trouble?”
 {:#p60}
 
 “There wouldn’t be.”
@@ -258,7 +258,7 @@ next: DA_14.html
 62\. “Ānanda, it’s for this reason that we know consciousness comes from name and form. ‘Consciousness exists conditioned by name and form.’ That’s the meaning of what I said.
 {:#p62}
 
-63\. “Therefore, Ānanda, name and form conditions consciousness. Consciousness conditions name and form. Name and form conditions the six sense fields. The six sense fields condition contact. Contact conditions feeling. Feeling conditions craving. Craving conditions grasping. Grasping conditions existence. Existence conditions birth. Birth conditions old age, death, sorrow, lamentation, and suffering, which forms the great mass of suffering.
+63\. “Therefore, Ānanda, name and form conditions consciousness. Consciousness conditions name and form. Name and form conditions the six sense fields. The six sense fields condition contact. Contact conditions feeling. Feeling conditions craving. Craving conditions grasping. Grasping conditions existence. Existence conditions birth. Birth conditions old age, death, grief, sorrow, pain, and trouble, which forms the great mass of suffering.
 {:#p63}
 
 #### Liberation by Wisdom
@@ -377,7 +377,7 @@ next: DA_14.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 14 June 2022
 {: .revised}
 
 ---
