--- a/01_agama/dirgha/DA_17.md
+++ b/01_agama/dirgha/DA_17.md
@@ -318,10 +318,10 @@ next: DA_18.html
 93\. “Some ascetics and priests make this statement, ‘The world created itself.’ Other ascetics and priests say, ‘The world was created by another.’ Others say, ‘It was created by itself and another.’ Others say, ‘It was neither created by itself nor by another. It spontaneously came into existence.’
 {:#p93}
 
-94\. “There are those ascetics and priests who say, ‘The world created itself.’ These ascetics and priests do so as a result of the dependent origination of contact. If they were separated from the causes of contact, saying that would be impossible. Why is that? Contact arises from the body of six senses. Feeling arises from contact. Craving arises from feeling. Grasping arises from craving. Existence arises from grasping. Birth arises from existence. Old, death, sorrow, lamentation, and suffering arise from birth. This is the formation of the great mass of suffering.
+94\. “There are those ascetics and priests who say, ‘The world created itself.’ These ascetics and priests do so as a result of the dependent origination of contact. If they were separated from the causes of contact, saying that would be impossible. Why is that? Contact arises from the body of six senses. Feeling arises from contact. Craving arises from feeling. Grasping arises from craving. Existence arises from grasping. Birth arises from existence. Old, death, grief, sorrow, pain, and trouble arise from birth. This is the formation of the great mass of suffering.
 {:#p94}
 
-95\. “If the body of six senses doesn’t exist, then there’s no contact. If there’s no contact, there’s no feeling. If there’s no feeling, there’s no craving. If there’s no craving, there’s no grasping. If there’s no grasping, there’s no existence. If there’s no existence, there’s no birth. If there’s no birth, there are no old age, death, sorrow, lamentation, suffering, or the formation of that great mass of suffering.
+95\. “If the body of six senses doesn’t exist, then there’s no contact. If there’s no contact, there’s no feeling. If there’s no feeling, there’s no craving. If there’s no craving, there’s no grasping. If there’s no grasping, there’s no existence. If there’s no existence, there’s no birth. If there’s no birth, there are no old age, death, grief, sorrow, pain, and trouble, or the formation of that great mass of suffering.
 {:#p95}
 
 96\. “They also say, ‘This world is created by another.’ They also say, ‘This world is created by itself and by another.’ They also say, ‘This world is neither created by itself nor by another. It comes into existence spontaneously.’ These views are the same. They exist because of contact. Without contact, they wouldn’t exist.”
@@ -365,7 +365,7 @@ next: DA_18.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 14 June 2022
 {: .revised}
 
 ---
