--- a/01_agama/ekottarika/43/EA_43_5.md
+++ b/01_agama/ekottarika/43/EA_43_5.md
@@ -147,7 +147,7 @@ And now they will destroy your army.’
 
 
 33\. “When I said that, the earth spirit rose up out of the ground with its palms together and said, ‘Bhagavān, I will bear witness to it!’
-“When the earth spirit had finished saying this, Māra Pāpīyān felt dejected and miserable. He retreated and disappeared.
+“When the earth spirit had finished saying this, Māra Pāpīyān felt grief, sorrow, pain, and troubled. He retreated and disappeared.
 {: #p33}
 
 34\. “Monks, it’s by this method that you should know that even the teaching ceases, [761b] so why wouldn’t what’s not the teaching? For a long time, I have taught you this one parable sutra of awakening. If you don’t investigate its words, how will you understand its meaning? The reason for that is this teaching is obscure. Disciples and pratyeka-buddhas who cultivate this teaching win great virtue and obtain the immortal and untroubled state.
@@ -172,7 +172,7 @@ And now they will destroy your army.’
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 8 February 2022
+Last Revised: 14 June 2022
 {: .revised}
 
 ---
