--- a/01_agama/ekottarika/50/EA_50_06.md
+++ b/01_agama/ekottarika/50/EA_50_06.md
@@ -35,7 +35,7 @@ next: EA_50_8.html
 8\. “Monks, you should know, ‘I know the way to hell.’ What are the causes and conditions for saying this?”
 {: #p8}
 
-9\. The Buddha told the monks, “I observe the minds of sentient beings, which is to say, ‘When this person’s body breaks up and their life ends, they will enter hell.’ Afterward, I observe that this person had entered hell and is experiencing numberless painful, bitter, and torturous punishments. Their anguish and misery are indescribable.
+9\. The Buddha told the monks, “I observe the minds of sentient beings, which is to say, ‘When this person’s body breaks up and their life ends, they will enter hell.’ Afterward, I observe that this person had entered hell and is experiencing numberless painful, bitter, and torturous punishments. Their grief, sorrow, pain, and trouble are indescribable.
 {: #p9}
 
 10\. “It’s like a huge firepit without any dust or smoke. Suppose that someone comes passing through the area, and a man with eyes observes that their route will surely make them fall into the fire, without a doubt. Afterward, he sees that they did fall into the firepit. ‘I said that person will fall into the firepit.’
@@ -47,7 +47,7 @@ next: EA_50_8.html
 12\. “How did this person enter hell? I observe the bad practices and unskillful actions performed by sentient beings that lead to hell. When their bodies break up and their lives end, they enter hell. I fully know of them. What I say about it is correct; it’s simply what it is.
 {: #p12}
 
-13\. “‘I know the destiny of animal births, and I know what leads to birth as animals.’ What’s the basis for saying this? Here, monks, I observe the thoughts in the mind of a sentient being: ‘After this person’s body breaks up and their life ends, they will be born as an animal.’ Afterward, I observe that this person has been born as an animal, and their anguish and [811c] misery are indescribable.
+13\. “‘I know the destiny of animal births, and I know what leads to birth as animals.’ What’s the basis for saying this? Here, monks, I observe the thoughts in the mind of a sentient being: ‘After this person’s body breaks up and their life ends, they will be born as an animal.’ Afterward, I observe that this person has been born as an animal, and their grief, sorrow, pain, and trouble [811c] are indescribable.
 {: #p13}
 
 14\. “How did this person fall to a birth as an animal? It’s like a village with a large latrine that’s full of excrement. Suppose that a person is walking along towards it, and a man with eyes sees the person walking that way. It won’t be long before they fall into that latrine. Afterward, he sees that this person has fallen into the latrine, and they’re experiencing misfortune and distress that’s indescribable. How did this person fall into that latrine? Now, I observe this type of sentient being in the same way: ‘When this person’s life ends, they will be born as an animal.’
@@ -108,7 +108,7 @@ next: EA_50_8.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 7 July 2021
+Last Revised: 14 June 2022
 {: .revised}
 
 ---
