--- a/01_agama/madhyama/MA_008.md
+++ b/01_agama/madhyama/MA_008.md
@@ -67,10 +67,10 @@ next: MA_009.html
 {:#p17}
 
 
-18\. “At the time, I and my friends practiced this path by which we benefited ourselves, benefited others, benefited many people, pitied the world, sought both meaning and benefit for gods and humans, and sought peace and happiness. At the time, I explained a teaching that didn’t reach the ultimate, wasn’t ultimately clean, wasn’t ultimately the religious practice, and wasn’t ultimately the completion of the religious life. At the time, I didn’t part with birth, old age, illness, death, lamentation, and sorrow, nor was I freed from all suffering yet.
+18\. “At the time, I and my friends practiced this path by which we benefited ourselves, benefited others, benefited many people, pitied the world, sought both meaning and benefit for gods and humans, and sought peace and happiness. At the time, I explained a teaching that didn’t reach the ultimate, wasn’t ultimately clean, wasn’t ultimately the religious practice, and wasn’t ultimately the completion of the religious life. At the time, I didn’t part with birth, old age, illness, death, lamentation, and grief, nor was I freed from all suffering yet.
 {:#p18}
 
-19\. “Monks, now I have arisen in the world as a Tathāgata, Arhat, and Completely Awakened One, Accomplished in Knowledge and Conduct, Well Gone, Understander of the World, Trainer in the Way and Teaching, Teacher of Gods and People, and I’m called a Buddha and a Bhagavān. Now, I benefit myself, benefit others, benefit many people, pity the world, seek both meaning and benefit for gods and humans, and seek peace and happiness. Now, I explain a teaching that reaches the ultimate, that’s ultimately clean, that’s ultimately the religious practice, and that’s ultimately the completion of the religious life. Now, I’ve parted with birth, old age, illness, death, lamentation, and sorrow, and I’ve been freed from all suffering.”
+19\. “Monks, now I have arisen in the world as a Tathāgata, Arhat, and Completely Awakened One, Accomplished in Knowledge and Conduct, Well Gone, Understander of the World, Trainer in the Way and Teaching, Teacher of Gods and People, and I’m called a Buddha and a Bhagavān. Now, I benefit myself, benefit others, benefit many people, pity the world, seek both meaning and benefit for gods and humans, and seek peace and happiness. Now, I explain a teaching that reaches the ultimate, that’s ultimately clean, that’s ultimately the religious practice, and that’s ultimately the completion of the religious life. Now, I’ve parted with birth, old age, illness, death, lamentation, and grief, and I’ve been freed from all suffering.”
 {:#p19}
 
 20\. Thus did the Buddha speak. Those monks who heard what the Buddha had taught rejoiced and approved.
@@ -88,7 +88,7 @@ next: MA_009.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 17 March 2021
+Last Revised: 15 June 2022
 {: .revised}
 
 ---
