--- a/01_agama/madhyama/MA_077.md
+++ b/01_agama/madhyama/MA_077.md
@@ -35,7 +35,7 @@ Venerable Aniruddha said, “So it is, Bhagavān. We are happy with this right D
 6\. The Bhagavān asked, “Aniruddha, you are youths, young men with pure black hair and physical vigor. You enjoyed traveling, enjoyed frequent baths, and you adorned and cherished yourselves. You lamented and cried with loved ones, your relatives, close friends, and parents, who didn’t want you to leave home to train on the path. Afterward, you shaved off your beards and hair, put on the reddish-brown robes, became faithful, left home, went homeless, and trained on the path.
 {: #p6}
 
-7\. “Aniruddha, it wasn’t out of fear of the king that you went to train on the path. It wasn’t out of fear of bandits, debts, worries, poverty, or the inability to make a living that you went to train on the path. You’ve simply had enough of birth, old age, illness, death, lamentation, and sorrow. You might also want to find the limit of that great mass of suffering. Aniruddha, was it not because of such a thought that all of you left home to train on the path?”
+7\. “Aniruddha, it wasn’t out of fear of the king that you went to train on the path. It wasn’t out of fear of bandits, debts, worries, poverty, or the inability to make a living that you went to train on the path. You’ve simply had enough of birth, old age, illness, death, lamentation, and misery. You might also want to find the limit of that great mass of suffering. Aniruddha, was it not because of such a thought that all of you left home to train on the path?”
 {: #p7}
 
 He replied, “So it is.”
@@ -206,6 +206,6 @@ Aniruddha and the other accepted the teaching and listened.
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 14 September 2020
+Last Revised: 14 June 2022
 {: .revised}
 ---
