--- a/01_agama/other/T109.md
+++ b/01_agama/other/T109.md
@@ -29,7 +29,7 @@ next: T110.html
 6\. “If monks hear the path from beginning to end, they should already know the truth about suffering. Once they are single-minded, they accept it with vision, accept it with meditation, and accept it by wise observation. They will realize it by thinking about it, which will cause their minds to be liberated. They should know the truth of ending suffering’s accumulation. Having accepted it with vision, meditation, and wise observation, they will realize it by thinking about it, which will cause their minds to be liberated. The truth of [suffering’s] end is thus.
 {:#p6}
 
-7\. “What is suffering? It refers to the suffering of birth and old age, the suffering of illness, the sufferings of grief, sorrow, and vexation, the suffering of association with what’s disliked, the suffering of separation from what’s loved, and the suffering of not getting what’s sought. Essentially, it’s the suffering from the five aggregates that are acquired and proliferate.
+7\. “What is suffering? It refers to the suffering of birth and old age, the suffering of illness, the suffering of grief, sorrow, and trouble, the suffering of association with what’s disliked, the suffering of separation from what’s loved, and the suffering of not getting what’s sought. Essentially, it’s the suffering from the five aggregates that are acquired and proliferate.
 {:#p7}
 
 8\. “What is the accumulation of suffering? It refers to repeated existence and a disposition towards pleasure that comes from craving. Not parting from indulgence, craving desires, craving for form, and craving non-form wherever it may be is the accumulation of suffering.
@@ -66,7 +66,7 @@ next: T110.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 27 August 2020
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
