--- a/01_agama/samyukta/01/SA1_149.md
+++ b/01_agama/samyukta/01/SA1_149.md
@@ -26,7 +26,7 @@ next: SA1_150.html
 5\. “Monks, there is a mundane rule of the world that I myself also know and realize, and I discern, explain, and demonstrate it for people. The world is blind, without eyes, and doesn’t know or see it, but it’s not me who is mistaken.
 {:#p5}
 
-6\. “Monks, what is the mundane rule of the world that I myself know and realize [8c] and that I explain, discern, and demonstrate for people who are blind, without eyes, and don’t know or see it? Monks, form is impermanent, painful, and liable to change. This is called the mundane law of the world. Thus, feeling … conception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane rule of the world. Monks, this is the mundane rule of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Those who are blind and without eyes don’t know or see it. How am I like those who are blind, without eyes, and don’t know or see it?”
+6\. “Monks, what is the mundane rule of the world that I myself know and realize [8c] and that I explain, discern, and demonstrate for people who are blind, without eyes, and don’t know or see it? Monks, form is impermanent, painful, and liable to change. This is called the mundane rule of the world. Thus, feeling … conception … volition … consciousness is impermanent, painful, and liable to change. This is the mundane rule of the world. Monks, this is the mundane rule of the world that I myself know and realize and that I discern, explain, and demonstrate for people. Those who are blind and without eyes don’t know or see it. How am I like those who are blind, without eyes, and don’t know or see it?”
 {:#p6}
 
 7\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -40,7 +40,7 @@ next: SA1_150.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
