--- a/01_agama/samyukta/01/SA1_16.md
+++ b/01_agama/samyukta/01/SA1_16.md
@@ -17,7 +17,7 @@ next: SA1_17.html
 2\. It was then that the Bhagavān addressed the monks, “Form is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation. Thus, feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation.
 {:#p2}
 
-3\. “Noble disciples who thus observe are liberated from form and liberated from sensation … conception … volition … consciousness. I say that this is complete liberation from birth, old age, illness, death, grief, sorrow, pain, and vexation.”
+3\. “Noble disciples who thus observe are liberated from form and liberated from sensation … conception … volition … consciousness. I say that this is complete liberation from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
 {:#p3}
 
 4\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -30,7 +30,7 @@ next: SA1_17.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
