--- a/01_agama/samyukta/01/SA1_160.md
+++ b/01_agama/samyukta/01/SA1_160.md
@@ -17,7 +17,7 @@ next: SA1_161.html
 2\.  It was then that the Bhagavān addressed the monks, “A faithful good son who is correctly faithful, not at home, and has left home thinks to himself, ‘I should follow the teaching. I will often cultivate disillusionment with form … feeling … conception … volition, and often cultivate disillusionment with consciousness.’
 {:#p2}
 
-3\. “A faithful good son who is correctly faithful, not at home, and has left home then often cultivates disillusionment with form … feeling … conception … volition, and often cultivates disillusionment with consciousness, so he becomes disillusioned with form … feeling … conception … volition, and becomes disillusioned with consciousness. He then attains the escape from form … feeling … conception … volition, and attains the escape from consciousness. I say that he will be free from all birth, old age, illness, death, grief, sorrow, vexation, and suffering.”
+3\. “A faithful good son who is correctly faithful, not at home, and has left home then often cultivates disillusionment with form … feeling … conception … volition, and often cultivates disillusionment with consciousness, so he becomes disillusioned with form … feeling … conception … volition, and becomes disillusioned with consciousness. He then attains the escape from form … feeling … conception … volition, and attains the escape from consciousness. I say that he will be free from all birth, old age, illness, death, grief, sorrow, pain, and trouble.”
 {:#p3}
 
 4\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -31,7 +31,7 @@ next: SA1_161.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
