--- a/01_agama/samyukta/01/SA1_18.md
+++ b/01_agama/samyukta/01/SA1_18.md
@@ -20,7 +20,7 @@ next: SA1_19.html
 3\. “Thus, monks, form is impermanent, and feeling … conception … volition … consciousness is impermanent. What’s impermanent is painful, what’s painful is not self, and what’s not self doesn’t belong to self. Such observation is called true and correct observation.
 {:#p3}
 
-4\. “Noble disciples who thus observe are liberated from form and liberated from feeling … conception … volition … consciousness. I say that this is equal to being liberated from birth, old age, illness, death, sorrow, lamentation, pain, and vexation.”
+4\. “Noble disciples who thus observe are liberated from form and liberated from feeling … conception … volition … consciousness. I say that this is equal to being liberated from birth, old age, illness, death, grief, sorrow, pain, and trouble.”
 {:#p4}
 
 5\. When the monks heard what the Buddha taught, they rejoiced and approved.
@@ -33,7 +33,7 @@ next: SA1_19.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
