--- a/01_agama/samyukta/03/SA3_2.md
+++ b/01_agama/samyukta/03/SA3_2.md
@@ -14,16 +14,16 @@ next: ../04/index.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta Grove in Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When clinging to things is savored, thought about, and fetters the mind, then one’s mind runs around chasing after name and form. Name and form are the condition for the six sense fields. The six sense fields are the condition for contact. Contact is the condition for feeling. Feeling is the condition for craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, sorrow, grief, distress, and pain. Thus forms the whole mass of suffering.
+2\. It was then that the Bhagavān addressed the monks, “When clinging to things is savored, thought about, and fetters the mind, then one’s mind runs around chasing after name and form. Name and form are the condition for the six sense fields. The six sense fields are the condition for contact. Contact is the condition for feeling. Feeling is the condition for craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
 {: #p2}
 
 3\. “It’s like the roots, trunk, limbs, branches, leaves, flowers, and fruit of a great tree. The roots under it go deep and make it secure. Cultivated with manure and soil and soaked with water, that tree will always be secure in the world and not decay.
 {: #p3}
 
-4\. “So it is, monks. When clinging to things is savored, thought about, and fetters the mind, then one’s mind runs around chasing after name and form. Name and form are the condition for the six sense fields. The six sense fields are the condition for contact. Contact is the condition for feeling. Feeling is the condition for craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, sorrow, grief, distress, and pain. Thus forms the whole mass of suffering.
+4\. “So it is, monks. When clinging to things is savored, thought about, and fetters the mind, then one’s mind runs around chasing after name and form. Name and form are the condition for the six sense fields. The six sense fields are the condition for contact. Contact is the condition for feeling. Feeling is the condition for craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
 {: #p4}
 
-5\. “Suppose clinging to things is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about them, and their mind won’t be attached to anything. One’s consciousness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six sense fields cease. When the six sense fields cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, sorrow, grief, distress, and pain cease. Thus ceases the whole mass of suffering.
+5\. “Suppose clinging to things is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about them, and their mind won’t be attached to anything. One’s consciousness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six sense fields cease. When the six sense fields cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.
 {: #p5}
 
 6\. “It’s like someone planting a tree. [At first, it’s small, flexible, and weak.] If it’s not cared for and protected in time, it’s not made secure. They don’t cultivate it with manure and soil, don’t water it at appropriate times, and don’t prepare it for cold and warm weather. It can’t grow larger [under those conditions].
@@ -37,7 +37,7 @@ next: ../04/index.html
 
 They answered, “Yes, Bhagavān!”
 
-9\. “So it is, monks. Suppose clinging to things is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about them, and their mind won’t be attached to anything. One’s consciousness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six sense fields cease. When the six sense fields cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, sorrow, grief, distress, and pain cease. Thus ceases the whole mass of suffering.”
+9\. “So it is, monks. Suppose clinging to things is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about them, and their mind won’t be attached to anything. One’s consciousness won’t run around chasing after name and form, and then name and form cease. When name and form cease, the six sense fields cease. When the six sense fields cease, contact ceases. When contact ceases, feeling ceases. When feeling ceases, craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.”
 {: #p9}
 
 10\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
@@ -51,7 +51,7 @@ They answered, “Yes, Bhagavān!”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 22 April 2022
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
