--- a/01_agama/samyukta/19/SA19_15.md
+++ b/01_agama/samyukta/19/SA19_15.md
@@ -55,7 +55,7 @@ People observe the eight-precept sabbath.\\
 Just like my cultivation,\\
 Their cultivation is likewise!’
 
-“This is not well spoken. Why is that? That Śakra the Lord of Gods himself has disturbances of craving, dislike, and delusion, and he isn’t freed from birth, old age, illness, death, sorrow, lamentation, vexation, and suffering.
+“This is not well spoken. Why is that? That Śakra the Lord of Gods himself has disturbances of craving, dislike, and delusion, and he isn’t freed from birth, old age, illness, death, grief, sorrow, pain, and trouble.
 
 11\. “Monks, if an arhat who has ended the contaminants, accomplished the task, has discarded the heavy burdens, cut the bonds of existence, and who’s mind is well liberated speaks this verse:
 {:#p11}
@@ -67,7 +67,7 @@ People observe the eight-precept sabbath.\\
 Just like my cultivation,\\
 Their cultivation is likewise!’
 
-“That statement is well spoken. Why is that? That arhat monk is free of craving, dislike, and delusion, and he has been freed from birth, old age, illness, death, sorrow, lamentation, vexation, and suffering. So, this verse is well spoken as a result.”
+“That statement is well spoken. Why is that? That arhat monk is free of craving, dislike, and delusion, and he has been freed from birth, old age, illness, death, grief, sorrow, pain, and trouble. So, this verse is well spoken as a result.”
 
 12\. After the Buddha spoke this sūtra, the monks who heard what the Buddha said rejoiced and approved.
 {:#p12}
@@ -80,7 +80,7 @@ Their cultivation is likewise!’
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 December 2020
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
