--- a/01_agama/samyukta/35/SA35_7.md
+++ b/01_agama/samyukta/35/SA35_7.md
@@ -14,13 +14,13 @@ next: SA35_40.html
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds, that’s an attachment, and that’s viewed as self, which causes the arising of grief, sorrow, vexation, and pain that have yet to arise and increases the grief, sorrow, vexation, and pain that have already arisen?”
+2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds, that’s an attachment, and that’s viewed as self, which causes the arising of grief, sorrow, pain, and trouble that have yet to arise and increases the grief, sorrow, pain, and trouble that have already arisen?”
 {: #p2}
 
 3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge. Please explain this in detail! After they hear it, the monks will accept and approve.”
 {: #p3}
 
-4\. The Buddha addressed the monks, “It’s because form exists and because form arises, binds, and becomes an attachment that it’s viewed as self. It causes the arising of grief, sorrow, pain, and vexation that have yet to arise and increases the grief, sorrow, pain, and vexation that have already arisen. *Feeling, conception, volition, and consciousness are likewise*.
+4\. The Buddha addressed the monks, “It’s because form exists and because form arises, binds, and becomes an attachment that it’s viewed as self. It causes the arising of grief, sorrow, pain, and trouble that have yet to arise and increases the grief, sorrow, pain, and trouble that have already arisen. *Feeling, conception, volition, and consciousness are likewise*.
 {: #p4}
 
 5\. “Monks, what do you think? Is form permanent, or is it impermanent?”
@@ -33,7 +33,7 @@ They replied, “Impermanent, Bhagavān!”
 
 They replied, “It’s painful, Bhagavān!”
 
-7\. “So it is, monks. If something is impermanent, then it’s painful. Because this pain exists, these things arise, tie, become attachments, and are viewed as self. It causes the arising of grief, sorrow, pain, and vexation that have yet to arise and increases the grief, sorrow, pain, and vexation that have already arisen. *Feeling, conception, volition, and consciousness are likewise*.
+7\. “So it is, monks. If something is impermanent, then it’s painful. Because this pain exists, these things arise, tie, become attachments, and are viewed as self. It causes the arising of grief, sorrow, pain, and trouble that have yet to arise and increases the grief, sorrow, pain, and trouble that have already arisen. *Feeling, conception, volition, and consciousness are likewise*.
 {: #p7}
 
 8\. “Therefore, monks, all forms that exist, whether past, future, or present, internal or external, coarse or fine, beautiful or ugly, and distant or near are not self, not different than self, nor are either present in the other. This is called correct wisdom. *Feeling, conception, volition, and consciousness are likewise*.
@@ -58,7 +58,7 @@ They replied, “It’s painful, Bhagavān!”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
