--- a/01_agama/samyukta/01/SA1_148.md
+++ b/01_agama/samyukta/01/SA1_148.md
@@ -17,17 +17,17 @@ next: SA1_149.html
 2\. It was then that the Bhagavān addressed the monks, “Stand on your own island and on your own support. Stand on the island of the teaching and the support of the teaching, not on another island or another support.
 {:#p2}
 
-3\. “Monks, you should correctly examine this while standing on your own island and on your own support. Stand on the island of the teaching and the support of the teaching, not on another island or another support. What cause gives rise to grief, sorrow, vexation, and suffering? How do they exist? What do they cause? Why are they attachments? How do you yourself examine the arising of grief, sorrow, vexation, and suffering that have yet to arise and the growth of grief, sorrow, vexation, and suffering that have already arisen?”
+3\. “Monks, you should correctly examine this while standing on your own island and on your own support. Stand on the island of the teaching and the support of the teaching, not on another island or another support. What cause gives rise to grief, sorrow, pain, and trouble? How do they exist? What do they cause? Why are they attachments? How do you yourself examine the arising of grief, sorrow, pain, and trouble that have yet to arise and the growth of grief, sorrow, pain, and trouble that have already arisen?”
 {:#p3}
 
 The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support. Please explain this. After listening, the monks will approve of what’s said.”
 
-4\. The Buddha told [8b] the monks, “Listen closely, and well consider it. I will explain it for you. Monks, there is form, they cause form, and they are tied to form when one examines for themselves the arising of grief, sorrow, vexation, and suffering that have yet to arise and the growth of grief, sorrow, vexation, and suffering that have already arisen. Feelings, conceptions, volitions, and consciousness are likewise. Monks, could it be that form is permanent, eternal, unchanging, and a correct abode?”
+4\. The Buddha told [8b] the monks, “Listen closely, and well consider it. I will explain it for you. Monks, there is form, they cause form, and they are tied to form when one examines for themselves the arising of grief, sorrow, pain, and trouble that have yet to arise and the growth of grief, sorrow, pain, and trouble, and suffering that have already arisen. Feelings, conceptions, volitions, and consciousness are likewise. Monks, could it be that form is permanent, eternal, unchanging, and a correct abode?”
 {:#p4}
 
 They replied, “No, Bhagavān.”
 
-5\. The Buddha told the monks, “Good, monks! Good! Form is impermanent. Suppose good sons know that form is impermanent, painful, and changing. Parting with desire for them, they cease, become tranquil, and disappear. After knowing that all forms have been impermanent, painful, and liable to change since the distant past, then those good sons will stop form when it’s the cause and condition giving rise to grief, sorrow, vexation, and suffering. Having stopped them, they’ll attach to nothing. Being detached, they’ll live in well-being. Once they live in well-being, that’s called nirvāṇa. *Feelings, conceptions, volitions, and consciousness are likewise.*”
+5\. The Buddha told the monks, “Good, monks! Good! Form is impermanent. Suppose good sons know that form is impermanent, painful, and changing. Parting with desire for them, they cease, become tranquil, and disappear. After knowing that all forms have been impermanent, painful, and liable to change since the distant past, then those good sons will stop form when it’s the cause and condition giving rise to grief, sorrow, pain, and trouble. Having stopped them, they’ll attach to nothing. Being detached, they’ll live in well-being. Once they live in well-being, that’s called nirvāṇa. *Feelings, conceptions, volitions, and consciousness are likewise.*”
 {:#p5}
 
 6\. When the Buddha spoke this sūtra, the contaminants didn’t arise in 16 monks, and their minds were liberated.
@@ -50,7 +50,7 @@ They replied, “No, Bhagavān.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
