--- a/01_agama/samyukta/03/SA3_1.md
+++ b/01_agama/samyukta/03/SA3_1.md
@@ -14,16 +14,16 @@ next: SA3_2.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When being bound by the bonds is savored, thought about, and fetters the mind, then craving arises. Craving then is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, sorrow, grief, distress, and pain. Thus forms the whole mass of suffering.
+2\. It was then that the Bhagavān addressed the monks, “When being bound by the bonds is savored, thought about, and fetters the mind, then craving arises. Craving then is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
 {: #p2}
 
 3\. “It’s like someone planting a tree. At first, it’s small, flexible, and weak. When cared for and protected, it’s made secure. They cultivate it with manure and soil, water it at appropriate times, and prepare it for cold and warm weather. Afterward, the tree is able grow larger under those conditions.
 {: #p3}
 
-4\. “So it is, monks. When being bound by the bonds is savored and nourished, it creates affection and craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, sorrow, grief, distress, and pain. Thus forms the whole mass of suffering.
+4\. “So it is, monks. When being bound by the bonds is savored and nourished, it creates affection and craving. Craving is the condition for clinging. Clinging is the condition for existence. Existence is the condition for birth. Birth is the condition for old age, illness, death, grief, sorrow, pain, and trouble. Thus forms the whole mass of suffering.
 {: #p4}
 
-5\. “Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about it, their mind won’t be attached to it, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, sorrow, grief, distress, and pain cease. Thus ceases the whole mass of suffering.
+5\. “Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about it, their mind won’t be attached to it, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.
 {: #p5}
 
 6\. “It’s like someone planting a tree. At first, it’s small, flexible, and weak. If they don’t care for and protect it, it’s not made secure. They don’t cultivate it with manure and soil, don’t water it at appropriate times, and don’t prepare it for cold and warm weather. It can’t grow larger [under those conditions].
@@ -37,7 +37,7 @@ next: SA3_2.html
 
 They answered, “Yes, Bhagavān!”
 
-9\. “So it is, monks. Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about them, their mind won’t be attached to them, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, sorrow, grief, distress, and pain cease. Thus ceases the whole mass of suffering.”
+9\. “So it is, monks. Suppose being bound by the bonds is followed by contemplation of impermanence, contemplation of persisting, arising, and ceasing, contemplation of desiring nothing, contemplation of cessation, and contemplation of detachment. One won’t think about them, their mind won’t be attached to them, and then craving ceases. When craving ceases, clinging ceases. When clinging ceases, existence ceases. When existence ceases, birth ceases. When birth ceases, old age, illness, death, grief, sorrow, pain, and trouble cease. Thus ceases the whole mass of suffering.”
 {: #p9}
 
 10\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
