--- a/01_agama/samyukta/06/SA6_5.md
+++ b/01_agama/samyukta/06/SA6_5.md
@@ -32,7 +32,7 @@ next: ../07/index.html
 7\. “Regarding the accumulation, cessation, enjoyment, danger, or escape of these two types of feeling, they don’t know them as they really are. Because they don’t know them as they really are, they give rise to feelings that aren’t painful or pleasant and become inclined to delusion about them.
 {:#p7}
 
-8\. “They are bound to pleasant feelings, painful feelings, and feelings that aren’t painful or pleasant and never escape them. What binds them? They are bound by craving, aversion, and delusion. They are bound by birth, old age, illness, death, sorrow, lamentation, vexation, and suffering.
+8\. “They are bound to pleasant feelings, painful feelings, and feelings that aren’t painful or pleasant and never escape them. What binds them? They are bound by craving, aversion, and delusion. They are bound by birth, old age, illness, death, grief, sorrow, pain, and trouble.
 {:#p8}
 
 9\. “For well-versed noble disciples, physical contact gives rise to painful feelings, and they’re harassed by great suffering until their lives are taken, but they don’t become sorrowful and lament the injustice of it or cry aloud, and their minds aren’t maddened by it. At that point, they only have one feeling that arises, the physical feeling. The mental feeling doesn’t arise.
@@ -41,7 +41,7 @@ next: ../07/index.html
 10\. “It’s like a man shot with one poison arrow but not two poison arrows. At that point, he only has one feeling, which is the physical feeling. He doesn’t have mental feeling. When they contact pleasant feelings, they aren’t defiled by desire and delight. Because they aren’t defiled by desire and delight, they aren’t inclined to crave those pleasant feelings. When they contact painful feelings, dislike doesn’t arise. Because dislike doesn’t arise, they aren’t inclined to dislike them. The accumulation, cessation, enjoyment, danger, and escape of those two inclinations are known as they really are. Because they are known as they really are, noble disciples aren’t inclined to delusion about feelings that aren’t painful or pleasant.
 {:#p10}
 
-11\. “They are freed and not bound by those pleasant feelings, and they are freed and not bound by painful feelings and feelings that aren’t painful or pleasant. They aren’t bound by what? They aren’t bound by craving, dislike, and delusion, and they aren’t bound by birth, old age, illness, death, sorrow, lamentation, vexation, and suffering.”
+11\. “They are freed and not bound by those pleasant feelings, and they are freed and not bound by painful feelings and feelings that aren’t painful or pleasant. They aren’t bound by what? They aren’t bound by craving, dislike, and delusion, and they aren’t bound by birth, old age, illness, death, grief, sorrow, pain, and trouble.”
 {:#p11}
 
 12\. The Bhagavān then spoke in verse:
@@ -78,7 +78,7 @@ He abides forever in Parinirvāṇa.”
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 6 December 2020
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
