--- a/01_agama/samyukta/11/SA11_41.md
+++ b/01_agama/samyukta/11/SA11_41.md
@@ -14,7 +14,7 @@ next: SA11_58.html
 1\. Thus have I heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “If a monk grows tired of form and parts with desire for it, it ceases completely, doesn’t arise, and he’s liberated. This is called the unsurpassed, correct, and complete awakening. Feeling, conception, volition, and consciousness are likewise. If, again, a monk [186c] grows tired of form and parts with desire for it, it doesn’t arise, and he’s liberated. This is called an arhat liberated by wisdom. Feeling, conception, volition, and consciousness are likewise. Monks, what are the many differences between the Tathāgata, Arhat, and Completely Awakened One and an arhat liberated by wisdom?”
+2\. It was then that the Bhagavān addressed the monks, “Suppose a monk grows tired of form and parts with desire for it. It ceases completely, doesn’t arise, and he’s liberated from it. This is called the unsurpassed, correct, and complete awakening. Feeling, conception, volition, and consciousness are likewise. Suppose, again, a monk [186c] grows tired of form and parts with desire for it. It doesn’t arise, and he’s liberated from it. This is called an arhat liberated by wisdom. Feeling, conception, volition, and consciousness are likewise. Monks, what are the various differences between the Tathāgata, Arhat, and Completely Awakened One and an arhat who’s liberated by wisdom?”
 {:#p2}
 
 3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma support. Please let him explain it. Once they hear it, the monks will accept and approve of it.”
@@ -23,7 +23,7 @@ next: SA11_58.html
 4\. The Buddha told the monks, “Listen closely, and consider it well. I’ll explain this for you. Before, when the teaching had yet to be heard, the Tathāgata, Arhat, and Completely Awakened One realized and knew it himself. Knowing it himself in the present life, he attained complete awakening. He was able at a future time to explain the correct teaching that awakened his disciples, namely the four abodes of mindfulness, four right efforts, four mental abilities, five faculties, five powers, seven factors of awakening, and the eightfold path. This is called the Tathāgata, Arhat, and Completely Awakened One.
 {:#p4}
 
-5\. “He attained the teaching that had yet to be attained, managed the religious practice that had yet to be managed, and well knew the path that he well knows as the leader of this assembly. Afterward, his disciples succeeded in following the teaching and the path. They delighted and appreciated the great teacher’s instruction, teaching, and skill in the correct teaching. This is called the many differences between the Tathāgata, Arhat, and Completely Awakened One and the arhat liberated by wisdom.
+5\. “He attained the teaching that had yet to be attained, managed the religious practice that had yet to be managed, and well knew the path that he well knows as the leader of this assembly. Afterward, his disciples succeed in following the teaching and the path. They are delighted and appreciate the great teacher’s instruction, teaching, and skill in the correct teaching. These are called the various differences between the Tathāgata, Arhat, and Completely Awakened One and the arhat who’s liberated by wisdom.
 {:#p5}
 
 6\. “Furthermore, there are five training powers and the Tathāgata’s ten powers. What are the training powers? They are the powers of faith, effort, mindfulness, concentration, and wisdom.
@@ -73,7 +73,7 @@ next: SA11_58.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 9 June 2022
+Last Revised: 13 June 2022
 {: .revised}
 
 ---
